--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			<div class="container">
 
 				<header>
-					<h2 class="alt">Hi! I'm <strong>Prologue</strong>, a responsive<br />
+					<h2 class="alt">Hi! I'm <strong>NARIGUDO</strong>, um artista<br />
 						site template designed by.</h2>
 					<p>Ligula scelerisque justo sem accumsan diam quis<br />
 						vitae natoque dictum sollicitudin elementum.</p>
